--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "lint": "prettier . --check"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "concurrently": "^7.1.0",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^17.0.0",
-    "prettier": "^2.8.8"
+    "prettier": "^3.7.4"
   },
   "dependencies": {
     "react": "^18.2.0"
